apps/base/donetick/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donetick
spec:
  ports:
    - port: 2021
      targetPort: 2021
  selector:
    app: donetick
  type: ClusterIP
